--- a/Stylesheets/style.css
+++ b/Stylesheets/style.css
@@ -9,6 +9,7 @@ html{
     margin: 0;
     padding: 0;
     font-family: 'Itim', cursive;
+    background-image: url("https://fondosmil.com/fondo/16641.jpg");
 }
 
 html{
