--- a/Stylesheets/style.css
+++ b/Stylesheets/style.css
@@ -4,6 +4,9 @@ html{
     background-image: url("https://fondosmil.com/fondo/16641.jpg");
 }
 
+main{
+    background-color:#000;
+}
 
 *{
     margin: 0;
