--- a/Stylesheets/style.css
+++ b/Stylesheets/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Itim&display=swap');
 
 html{
-    
+    background-image: url("https://fondosmil.com/fondo/16641.jpg");
 }
 
 body,head{
